--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,27 +11,41 @@ body{
   font-family: 'the_bold_font', sans-serif;
 }
 
-.standard_button{
+button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border: 0;
   border-radius: 5px;
-  background: #4676D7;
   color: #fff;
   padding: 8px 16px;
   font-size: 16px;
   font-family: 'the_bold_font', sans-serif;
   cursor: pointer;
 }
-.standard_button:hover {
-  background: #1d49aa;
-}
 
 .standard_button:focus {
   outline: none;
   box-shadow: 0 0 0 3px #cbd6ee;
 }
+
+.generate_button{
+  background: #4676D7;
+}
+
+.generate_button:hover {
+  background: #1d49aa;
+}
+
+.print_button{
+  background: #707070;
+}
+
+.print_button:hover {
+  background: #494949;
+}
+
+
 
 @media print
 {
